--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,3 @@
 MONGO_URI=mongodb+srv://saulwolkove:DancingStar2022@cluster0.uyyy3ru.mongodb.net/Cluster0?retryWrites=true&w=majority
-PASSWORD=abc
+PASSWORD=Foundation
 SECRET=123
